--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 /.Rproj.user
 /02_data/cpi_weights.csv
 /02_data/cpi_index.csv
+/03_results/sc_series_1.csv
+/03_results/sc_series_01.csv
 Dockerfile
 .dockerignore
 .Rhistory
