--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /.Rproj.user
-/02_data/cpi_weights.csv
 /02_data/cpi_index.csv
 /03_results/sc_series.csv
-/03_results/sc_series_1.csv
 /03_results/sc_series_01.csv
+/03_results/sc_series_01_no*
+/03_results/sc_inference_ttest_no*
 /05_exploration
 Dockerfile
 .dockerignore
